--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 
+/* Versão Mobile First */
+
 /*
    Paleta de Cores
    Verde: #49a09d
@@ -36,6 +38,8 @@ section#login {
    height: 500px;
    border-radius: 20px;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
+   transition: width 0.3s, height 0.3s;
+   transition-timing-function: easy;
 }
 
 section#login > div#imagem {
