--- a/estilos/media-queries.css
+++ b/estilos/media-queries.css
@@ -20,6 +20,7 @@
    }
    section#login {
       width: 80vw;
+      height: 280px;
    }
    section#login > div#imagem {
       float: left;
@@ -40,14 +41,22 @@
    }
    section#login {
       width: 950px;
+      height: 350px;
    }
    section#login > div#imagem {
-      float: left;
+      float: right;
       width: 50%;
       height: 100%;
    }
    section#login > div#formulario {
-      float: right;
+      float: left;
       width: 50%;
+   }
+   section#login > div#formulario > h1 {
+      font-size: 2em;
+   }
+   section#login > div#formulario > p {
+      font-size: 1em;
+      margin: 20px 0px;
    }
 }
